Project-Review-3/k8s/networkpolicies/allow-services-to-servicebus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-services-to-servicebus
  namespace: carenest-dev
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 5671
      protocol: TCP
    - port: 443
      protocol: TCP
