Project-Review-3/k8s/networkpolicies/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: carenest-dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  # Allowing egress to DNS
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
